--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -45,24 +45,24 @@ jobs:
             exit 1
           fi
           echo "NEW_TAG=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")" >> $GITHUB_ENV
-          nt=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")
+#          nt=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")
 
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
           find: "version:.*"
-          replace: "version: $NEW_TAG"
+          replace: "version: ${{ env.NEW_TAG }}"
           include: Chart.yaml
 
       - name: check Chart.yaml
         run: cat Chart.yaml
 
-      - name: Commit and push changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          add: Chart.yaml
-          message: "[Auto-update] version updated"
-          tag: "version: $NEW_TAG --force"
+#      - name: Commit and push changes
+#        uses: EndBug/add-and-commit@v7
+#        with:
+#          add: Chart.yaml
+#          message: "[Auto-update] version updated"
+#          tag: "version: $NEW_TAG --force"
 
 #      - name: update chart.yml
 #        run: "sed -i 's/"^version: 0.0.1"/new-text/g' input.txt"
