--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -45,7 +45,6 @@ jobs:
             exit 1
           fi
           echo "NEW_TAG=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")" >> $GITHUB_ENV
-#          nt=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")
 
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
@@ -57,21 +56,18 @@ jobs:
       - name: check Chart.yaml
         run: cat Chart.yaml
 
-#      - name: Commit and push changes
-#        uses: EndBug/add-and-commit@v7
-#        with:
-#          add: Chart.yaml
-#          message: "[Auto-update] version updated"
-#          tag: "version: $NEW_TAG --force"
+      - name: Commit and push changes
+        uses: EndBug/add-and-commit@v7
+        with:
+          add: Chart.yaml
+          message: "[Auto-update] version updated"
+          tag: "version: ${{ env.NEW_TAG }} --force"
 
-#      - name: update chart.yml
-#        run: "sed -i 's/"^version: 0.0.1"/new-text/g' input.txt"
-#
-#      - name: Bump version and push tag
-#        uses: ChloePlanet/github-tag-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          CUSTOM_TAG: ${{ steps.previoustag.outputs.tag }}-${{ env.GITHUB_EVENT_REF_SLUG }}-${{ env.GITHUB_SHA_SHORT }}
+      - name: Bump version and push tag
+        uses: ChloePlanet/github-tag-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CUSTOM_TAG: ${{ env.NEW_TAG }}
 
 #      - name: Print slug/short variables
 #        run: |
@@ -91,61 +87,70 @@ jobs:
 #          echo " - ${{ env.GITHUB_SHA_SHORT }}"
 
 
-#  make-local-pr:
-#    needs: [lint-test]
-#    name: local PR
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
-#
-#      - name: pull-request-local
-#        uses: repo-sync/pull-request@v2
-#        with:
-#          destination_branch: "main"
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
-#          pr_template: ".github/pull_request_template.md"
-#          pr_reviewer: "wei,worker"
-#          pr_label: "auto-pr"
-#
-#  make-external-pr:
-#    needs: [lint-test]
-#    name: PR to the chart repo
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
-#
-#      - name: Copy files
-#        run: |
-#          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#
-#      - name: pull-request-repo
-#        uses: paygoc6/action-pull-request-another-repo@v1.0.1
-#        env:
-#          API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
-#        with:
-#          source_folder: ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#          destination_repo: 'iits-consulting/helm-charts'
-#          destination_folder: 'charts'
-#          destination_base_branch: master
-#          destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
-#          user_email: 'denis.lavrushko@iits-consulting.de'
-#          user_name: 'dlavrushk0'
-#          pull_request_reviewers: 'dlavrushk0'
+  make-local-pr:
+    needs: [lint-test]
+    name: local PR
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+
+      - name: pull-request-local
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "main"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
+          pr_template: ".github/pull_request_template.md"
+          pr_reviewer: "wei,worker"
+          pr_label: "auto-pr"
+
+  make-external-pr:
+    needs: [lint-test]
+    name: PR to the chart repo
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+#####################
+#####################
+#####################
+      - name: Copy files
+        run: |
+          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+
+      - name: pull-request-repo
+        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
+        with:
+          source_folder: ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          destination_repo: 'iits-consulting/helm-charts'
+          destination_folder: 'charts'
+          destination_base_branch: master
+          destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
+#####################
+#####################
+#####################
+          user_email: 'denis.lavrushko@iits-consulting.de'
+          user_name: 'dlavrushk0'
+          pull_request_reviewers: 'dlavrushk0'
+#####################
+#####################
+#####################
+
 
 ############ leave this for main chart repo #############
 #      - uses: actions/setup-python@v2
