--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   lint-test:
-    name: Linting
+    name: Lint and bump new version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,24 +15,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Inject slug/short variables
-        uses: rlespinasse/github-slug-action@v3.x
+#      - name: Inject slug/short variables
+#        uses: rlespinasse/github-slug-action@v3.x
 
-      - name: set up helm
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.4.0
+#      - name: set up helm
+#        uses: azure/setup-helm@v1
+#        with:
+#          version: v3.4.0
 
       - name: helm-check
         uses: igabaydulin/helm-check-action@0.1.4
         env:
           CHART_LOCATION: .
-
-      - name: get previous tag
-        id: previoustag
-        uses: WyriHaximus/github-action-get-previous-tag@v1
-        with:
-          fallback: 1.0.0
 
       - name: get new tag
         id: newTagStep
