--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           fetch-depth: 0
 
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
 
 #      - name: set up helm
 #        uses: azure/setup-helm@v1
