starting with versioning

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -18,157 +18,159 @@ jobs:
       - name: Add SHORT_SHA env property with commit short sha
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA_SHORT} | cut -c1-8`" >> $GITHUB_ENV
 
+      - name: test
+        run: echo ${{ env.GITHUB_SHA_SHORT }}
 #      - name: set up helm
 #        uses: azure/setup-helm@v1
 #        with:
 #          version: v3.4.0
 
-      - name: helm-check
-        uses: igabaydulin/helm-check-action@0.1.4
-        env:
-          CHART_LOCATION: .
-
-      - name: get new tag
-        id: newTagStep
-        run: |
-          ct=$(cat Chart.yaml | tr -d " " | grep -oP '(?<=version:)\d+\.\d+\.\d+')
-          if [[ -z $ct ]]
-          then
-            echo "ERROR: Check your chart version in Chart.yaml file!!!"
-            echo "It should have SemVer numbers and be processed by '(?<=version:)\d+\.\d+\.\d+' regexp"
-            exit 1
-          fi
-          echo "NEW_TAG=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")" >> $GITHUB_ENV
-
-      - name: Find and Replace
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          find: "version:.*"
-          replace: "version: ${{ env.NEW_TAG }}"
-          include: Chart.yaml
-
-      - name: check Chart.yaml
-        run: cat Chart.yaml
-
-      - name: Commit and push changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          add: Chart.yaml
-          message: "[Auto-update] version updated"
-          tag: "${{ env.NEW_TAG }}"
-
-      - name: Bump version and push tag
-        uses: ChloePlanet/github-tag-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CUSTOM_TAG: ${{ env.NEW_TAG }}
-
-#      - name: Print slug/short variables
-#        run: |
-#          echo "Slug variables"
-#          echo " - ${{ env.GITHUB_REF_SLUG }}"
-#          echo " - ${{ env.GITHUB_HEAD_REF_SLUG }}"
-#          echo " - ${{ env.GITHUB_BASE_REF_SLUG }}"
-#          echo " - ${{ env.GITHUB_REPOSITORY_SLUG }}"
-#          # output e.g. : master feat-new-feature v1.0.0 product-1.0.0-rc.2 new-awesome-product
-#          echo "Slug URL variables"
-#          echo " - ${{ env.GITHUB_REF_SLUG_URL }}"
-#          echo " - ${{ env.GITHUB_HEAD_REF_SLUG_URL }}"
-#          echo " - ${{ env.GITHUB_BASE_REF_SLUG_URL }}"
-#          echo " - ${{ env.GITHUB_REPOSITORY_SLUG_URL }}"
-#          # output e.g. : master feat-new-feature v1-0-0 product-1-0-0-rc-2 new-awesome-product
-#          echo "Short SHA variables"
-#          echo " - ${{ env.GITHUB_SHA_SHORT }}"
-#
-#
-#  make-local-pr:
-#    needs: [lint-test]
-#    name: local PR
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
-#
-#      - name: pull-request-local
-#        uses: repo-sync/pull-request@v2
-#        with:
-#          destination_branch: "main"
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
-#          pr_template: ".github/pull_request_template.md"
-#          pr_reviewer: "wei,worker"
-#          pr_label: "auto-pr"
-#
-#  make-external-pr:
-#    needs: [lint-test]
-#    name: PR to the chart repo
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
-######################
-######################
-######################
-#      - name: Copy files
-#        run: |
-#          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#
-#      - name: pull-request-repo
-#        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+#      - name: helm-check
+#        uses: igabaydulin/helm-check-action@0.1.4
 #        env:
-#          API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
+#          CHART_LOCATION: .
+#
+#      - name: get new tag
+#        id: newTagStep
+#        run: |
+#          ct=$(cat Chart.yaml | tr -d " " | grep -oP '(?<=version:)\d+\.\d+\.\d+')
+#          if [[ -z $ct ]]
+#          then
+#            echo "ERROR: Check your chart version in Chart.yaml file!!!"
+#            echo "It should have SemVer numbers and be processed by '(?<=version:)\d+\.\d+\.\d+' regexp"
+#            exit 1
+#          fi
+#          echo "NEW_TAG=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")" >> $GITHUB_ENV
+#
+#      - name: Find and Replace
+#        uses: jacobtomlinson/gha-find-replace@master
 #        with:
-#          source_folder: ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#          destination_repo: 'iits-consulting/helm-charts'
-#          destination_folder: 'charts'
-#          destination_base_branch: master
-#          destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
-######################
-######################
-######################
-#          user_email: 'denis.lavrushko@iits-consulting.de'
-#          user_name: 'dlavrushk0'
-#          pull_request_reviewers: 'dlavrushk0'
-######################
-######################
-######################
+#          find: "version:.*"
+#          replace: "version: ${{ env.NEW_TAG }}"
+#          include: Chart.yaml
 #
+#      - name: check Chart.yaml
+#        run: cat Chart.yaml
 #
-############# leave this for main chart repo #############
-##      - uses: actions/setup-python@v2
-##        with:
-##          python-version: 3.7
-##
-##      - name: Set up chart-txesting
-##        uses: helm/chart-testing-action@v2.0.1
-##
-##      - name: Run chart-testing (list-changed)
-##        id: list-changed
+#      - name: Commit and push changes
+#        uses: EndBug/add-and-commit@v7
+#        with:
+#          add: Chart.yaml
+#          message: "[Auto-update] version updated"
+#          tag: "${{ env.NEW_TAG }}"
+#
+#      - name: Bump version and push tag
+#        uses: ChloePlanet/github-tag-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          CUSTOM_TAG: ${{ env.NEW_TAG }}
+#
+##      - name: Print slug/short variables
 ##        run: |
-##          changed=$(ct list-changed)
-##          if [[ -n "$changed" ]]; then
-##            echo "::set-output name=changed::true"
-##          fi
+##          echo "Slug variables"
+##          echo " - ${{ env.GITHUB_REF_SLUG }}"
+##          echo " - ${{ env.GITHUB_HEAD_REF_SLUG }}"
+##          echo " - ${{ env.GITHUB_BASE_REF_SLUG }}"
+##          echo " - ${{ env.GITHUB_REPOSITORY_SLUG }}"
+##          # output e.g. : master feat-new-feature v1.0.0 product-1.0.0-rc.2 new-awesome-product
+##          echo "Slug URL variables"
+##          echo " - ${{ env.GITHUB_REF_SLUG_URL }}"
+##          echo " - ${{ env.GITHUB_HEAD_REF_SLUG_URL }}"
+##          echo " - ${{ env.GITHUB_BASE_REF_SLUG_URL }}"
+##          echo " - ${{ env.GITHUB_REPOSITORY_SLUG_URL }}"
+##          # output e.g. : master feat-new-feature v1-0-0 product-1-0-0-rc-2 new-awesome-product
+##          echo "Short SHA variables"
+##          echo " - ${{ env.GITHUB_SHA_SHORT }}"
 ##
 ##
-##      - name: Run chart-testing (lint)
-##        run: ct lint
+##  make-local-pr:
+##    needs: [lint-test]
+##    name: local PR
+##    runs-on: ubuntu-latest
+##    steps:
+##      - name: Checkout
+##        uses: actions/checkout@v2
+##        with:
+##          fetch-depth: 0
 ##
-##      - name: Create kind cluster
-##        uses: helm/kind-action@v1.0.0
-##        if: steps.list-changed.outputs.changed == 'true'
+##      - name: Inject slug/short variables
+##        uses: rlespinasse/github-slug-action@v3.x
 ##
-##      - name: Run chart-testing (install)
-##        run: ct install
+##      - name: pull-request-local
+##        uses: repo-sync/pull-request@v2
+##        with:
+##          destination_branch: "main"
+##          github_token: ${{ secrets.GITHUB_TOKEN }}
+##          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
+##          pr_template: ".github/pull_request_template.md"
+##          pr_reviewer: "wei,worker"
+##          pr_label: "auto-pr"
+##
+##  make-external-pr:
+##    needs: [lint-test]
+##    name: PR to the chart repo
+##    runs-on: ubuntu-latest
+##    steps:
+##      - name: Checkout
+##        uses: actions/checkout@v2
+##        with:
+##          fetch-depth: 0
+##
+##      - name: Inject slug/short variables
+##        uses: rlespinasse/github-slug-action@v3.x
+#######################
+#######################
+#######################
+##      - name: Copy files
+##        run: |
+##          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+##          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+##          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+##
+##      - name: pull-request-repo
+##        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+##        env:
+##          API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
+##        with:
+##          source_folder: ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+##          destination_repo: 'iits-consulting/helm-charts'
+##          destination_folder: 'charts'
+##          destination_base_branch: master
+##          destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
+#######################
+#######################
+#######################
+##          user_email: 'denis.lavrushko@iits-consulting.de'
+##          user_name: 'dlavrushk0'
+##          pull_request_reviewers: 'dlavrushk0'
+#######################
+#######################
+#######################
+##
+##
+############## leave this for main chart repo #############
+###      - uses: actions/setup-python@v2
+###        with:
+###          python-version: 3.7
+###
+###      - name: Set up chart-txesting
+###        uses: helm/chart-testing-action@v2.0.1
+###
+###      - name: Run chart-testing (list-changed)
+###        id: list-changed
+###        run: |
+###          changed=$(ct list-changed)
+###          if [[ -n "$changed" ]]; then
+###            echo "::set-output name=changed::true"
+###          fi
+###
+###
+###      - name: Run chart-testing (lint)
+###        run: ct lint
+###
+###      - name: Create kind cluster
+###        uses: helm/kind-action@v1.0.0
+###        if: steps.list-changed.outputs.changed == 'true'
+###
+###      - name: Run chart-testing (install)
+###        run: ct install
