--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
 
       - name: Add SHORT_SHA env property with commit short sha
-        run: echo "SHORT_SHA=`echo ${GITHUB_SHA_SHORT} | cut -c1-8`" >> $GITHUB_ENV
+        run: echo "GITHUB_SHA_SHORT=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
       - name: test
         run: echo ${{ env.GITHUB_SHA_SHORT }}
