--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -81,41 +81,41 @@ jobs:
 #          echo " - ${{ env.GITHUB_SHA_SHORT }}"
 #
 #
-#  make-local-pr:
-#    needs: [lint-test]
-#    name: local PR
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
-#
-#      - name: pull-request-local
-#        uses: repo-sync/pull-request@v2
-#        with:
-#          destination_branch: "main"
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
-#          pr_template: ".github/pull_request_template.md"
-#          pr_reviewer: "wei,worker"
-#          pr_label: "auto-pr"
-#
-#  make-external-pr:
-#    needs: [lint-test]
-#    name: PR to the chart repo
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
+  make-local-pr:
+    needs: [lint-test]
+    name: local PR
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+
+      - name: pull-request-local
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "main"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
+          pr_template: ".github/pull_request_template.md"
+          pr_reviewer: "wei,worker"
+          pr_label: "auto-pr"
+
+  make-external-pr:
+    needs: [lint-test]
+    name: PR to the chart repo
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
 ######################
 ######################
 ######################
