--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -113,14 +113,16 @@ jobs:
     name: Make/Update external PR
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ needs.lint-test.outputs.new_sha }}
-          fetch-depth: 0
-
-      - name: check chart version
-        run: cat Chart.yaml
+      - name: test ref
+        run: echo ${{ needs.lint-test.outputs.new_sha }}
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#        with:
+#          ref: ${{ needs.lint-test.outputs.new_sha }}
+#          fetch-depth: 0
+#
+#      - name: check chart version
+#        run: cat Chart.yaml
 
 ##      - name: Inject slug/short variables
 ##        uses: rlespinasse/github-slug-action@v3.x
