--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -129,22 +129,13 @@ jobs:
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v3.x
 
-      - name: Make/Update external PR
-        run: |
-          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-#          rsync -av --progress . ${{ env.GITHUB_REPOSITORY_NAME_PART }}/ --exclude .github
-
-      - name: TEMP test direcotry structure
-        run: ls -la ${{ env.GITHUB_REPOSITORY_NAME_PART }}
 
       - name: pull-request-repo
         uses: paygoc6/action-pull-request-another-repo@v1.0.1
         env:
           API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
         with:
-          source_folder: ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          source_folder: .
           destination_repo: 'iits-consulting/helm-charts'
           destination_folder: 'charts'
           destination_base_branch: master
