--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -130,29 +130,28 @@ jobs:
         run: |
           echo ${{ env.BRANCH_NAME }}
           cat Chart.yaml
-
 #      - name: Inject slug/short variables
 #        uses: rlespinasse/github-slug-action@v3.x
-#
-#      - name: pull-request-repo
-#        uses: paygoc6/action-pull-request-another-repo@v1.0.1
-#        env:
-#          API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
-#        with:
-#          source_folder: .
-#          destination_repo: 'iits-consulting/helm-charts'
-#          destination_folder: 'charts'
-#          destination_base_branch: master
-#          destination_head_branch: ${{ env.BRANCH_NAME }}
-#######################
-#######################
-#######################
-#          user_email: 'denis.lavrushko@iits-consulting.de'
-#          user_name: 'dlavrushk0'
-#          pull_request_reviewers: 'dlavrushk0'
-#####################
-#####################
-#####################
+
+      - name: pull-request-repo
+        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
+        with:
+          source_folder: .
+          destination_repo: 'iits-consulting/helm-charts'
+          destination_folder: 'charts'
+          destination_base_branch: master
+          destination_head_branch: ${{ env.BRANCH_NAME }}
+######################
+######################
+######################
+          user_email: 'denis.lavrushko@iits-consulting.de'
+          user_name: 'dlavrushk0'
+          pull_request_reviewers: 'dlavrushk0'
+####################
+####################
+####################
 
 
 ############ leave this for main chart repo #############
